<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#46A1F1"
    android:orientation="vertical">


    <Spinner
        android:id="@+id/spinner_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/ed_txt_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:background="@color/white"
        android:textColorHint="@color/gray"
        android:hint="@string/article" />
    <EditText
        android:id="@+id/ed_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="32dp"
        android:textColorHint="@color/gray"
        android:hint="@string/name_product" />
    <EditText
        android:id="@+id/ed_txt_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="32dp"
        android:textColorHint="@color/gray"
        android:hint="@string/param" />
    <Spinner
        android:id="@+id/spinner_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>